# rust-html2text

./: .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  html2text-web-demo-4995fe3e9786cf4c.js  html2text-web-demo-4995fe3e9786cf4c_bg.wasm  index.html
.circleci/: config.yml
.github/: dependabot.yml
.github/workflows/: ci.yml  jekyll-gh-pages.yml
benches/: tables.rs
docs/: index.markdown
docs/_includes/: head.html
docs/assets/: demo-main.js  html2text-web-demo.js  html2text-web-demo_bg.wasm
examples/: html2term.rs  html2text.rs  html2txt.rs
html2text-cli/: Cargo.toml  README.md
html2text-cli/src/: main.rs
html2text-web-demo/: Cargo.toml  Trunk.toml  index.html
html2text-web-demo/src/: lib.rs
html5ever_rcdom/: Cargo.toml
pages/: _config.yml  index.markdown
pages/_includes/: head.html
pages/assets/: demo-main.js  demo.css
src/: ansi_colours.rs  css.rs  lib.rs  macros.rs  markup5ever_rcdom.rs  tests.rs
src/css/: parser.rs  types.rs
src/render/: mod.rs  text_renderer.rs
wtt/: Cargo.toml
wtt/src/: args.rs  main.rs
wtt/src/browser/: mod.rs
wtt/src/ui/: mod.rs
