[package]
name = "html2text"
version = "0.13.0-alpha.1"
authors = ["Chris Emerson <github@mail.nosreme.org>"]
description = "Render HTML as plain text."
repository = "https://github.com/jugglerchris/rust-html2text/"
readme = "README.md"
documentation = "https://docs.rs/html2text/"
edition = "2021"
rust-version = "1.72"
categories = ["text-processing"]

keywords = ["html", "text"]
license = "MIT"

[dependencies]
html5ever = "0.28.0"
markup5ever = "0.14.0"
tendril = "0.4"
unicode-width = "0.1.5"
backtrace = { version = "0.3", optional=true }
thiserror = "1.0.50"
log = { version = "0.4.20", optional = true }
nom = "7.1.3"

[features]
html_trace = ["dep:log"]
html_trace_bt = ["html_trace", "dep:backtrace"]
default = []
css = []

[[example]]
name = "html2term"
path = "examples/html2term.rs"

[[example]]
name = "html2text"
path = "examples/html2text.rs"

[dev-dependencies]
env_logger = "0.10.1"
argparse = "0.2.2"
log = "0.4.20"

[target.'cfg(unix)'.dev-dependencies]
termion = "4.0"
