[package]
name = "html2text"
version = "0.16.2"
authors = ["Chris Emerson <github@mail.nosreme.org>"]
description = "Render HTML as plain text."
repository = "https://github.com/jugglerchris/rust-html2text/"
readme = "README.md"
documentation = "https://docs.rs/html2text/"
edition = "2021"
rust-version = "1.85"
categories = ["text-processing"]

keywords = ["html", "text"]
license = "MIT"

[dependencies]
html5ever = "0.36.1"
tendril = "0.4"
unicode-width = "0.2"
backtrace = { version = "0.3", optional=true }
thiserror = "2.0.0"
log = { version = "0.4.20", optional = true }
nom = { version = "8.0.0", optional = true }

[features]
html_trace = ["dep:log"]
html_trace_bt = ["html_trace", "dep:backtrace"]
default = []
css = [ "dep:nom" ]
css_ext = ["css"]

[[example]]
name = "html2term"
path = "examples/html2term.rs"

[[example]]
name = "html2text"
path = "examples/html2text.rs"

[dev-dependencies]
env_logger = "0.11.6"
argparse = "0.2.2"
log = "0.4.20"
syntect = "5.2.0"

[target.'cfg(unix)'.dev-dependencies]
termion = "4.0"
