[package]
name = "html2text"
description = "Render HTML as plain text."
readme = "README.md"
documentation = "https://docs.rs/html2text/"
categories = ["text-processing"]
keywords = ["html", "text"]
version.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[workspace]
members = [
  ".",
  "html2text-cli",
]

[workspace.package]
version = "0.17.0"
repository = "https://github.com/jugglerchris/rust-html2text/"
license = "MIT"
authors = ["Chris Emerson <github@mail.nosreme.org>"]
edition = "2024"
rust-version = "1.85"

[dependencies]
html5ever = "0.39.0"
tendril = "0.5"
unicode-width = "0.2"
backtrace = { version = "0.3", optional=true }
thiserror = "2.0.0"
log = { version = "0.4.20", optional = true }
nom = { version = "8.0.0", optional = true }

[features]
html_trace = ["dep:log"]
html_trace_bt = ["html_trace", "dep:backtrace"]
default = []
css = [ "dep:nom" ]
css_ext = ["css"]

[[example]]
name = "html2term"
path = "examples/html2term.rs"

[dev-dependencies]
env_logger = "0.11.6"
argparse = "0.2.2"
log = "0.4.20"

[target.'cfg(unix)'.dev-dependencies]
termion = "4.0"
