[package]
name = "html2text-cli"
version = "0.17.0"
authors = ["Chris Emerson <github@mail.nosreme.org>"]
description = "Render HTML as plain text."
repository = "https://github.com/jugglerchris/rust-html2text/"
readme = "README.md"
edition = "2024"
rust-version = "1.85"
categories = ["text-processing"]

keywords = ["html", "text"]
license = "MIT"

default-run = "html2text"

[[bin]]
name = "html2text"
path = "src/main.rs"

[dependencies]
html2text = { version = "0.17.0", path = ".." }
argparse = "0.2.2"
log = "0.4.20"
syntect = "5.2.0"

[target.'cfg(unix)'.dependencies]
termion = "4.0"

[features]
default = ["css"]
css = ["html2text/css"]
css_ext = ["html2text/css_ext"]
html_trace = ["html2text/html_trace"]
html_trace_btr = ["html2text/html_trace_bt"]
