[package]
name = "wtt"
version.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
html2text = { version = "0.17", path = ".." }
clap = { version = "4.6.1", features = ["derive"] }
reqwest = "0.13.2"
crossterm = { version = "0.29.0", features = ["event-stream"] }
ratatui = "0.30.0"
tokio = { version = "1.52.1", features = ["macros"] }
futures = "0.3.32"
async-stream = "0.3.6"
tracing = "0.1.44"
